kubernetes/home-lab/apps/networking/envoy-gateway/gateways/production.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: production
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production
spec:
  gatewayClassName: envoy-gateway
  # TODO gateway api 1.2.0
  # infrastructure:
  #   annotations:
  #     metallb.universe.tf/loadBalancerIPs: 192.168.0.236
  listeners:
    - name: http
      protocol: HTTP
      # hostname: "*.${INTERNAL_HOSTNAME}" TODO
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.${INTERNAL_HOSTNAME}"
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: lets-encrypt-production-tls
            kind: Secret
