kubernetes/home-lab/apps/networking/envoy-gateway/gateways/staging.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: staging
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-staging
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.${INTERNAL_HOSTNAME}"
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: lets-encrypt-staging-tls
            kind: Secret
